2004-07-12  Aaron W. LaFramboise  <aaron98wiridge9@aaronwl.com>

	* dlltool.c (ext_prefix_alias): New global variable.
	(make_one_lib_file): Add aliases with prefixes for external
	and import definitions.
	(usage): Document -p option.
	(long_options): Add --ext-prefix-alias option.
	(main): Handle -p.
	* doc/binutils.texi: Document new switch.
	* NEWS: Mention new switch.

2004-07-09  Aaron W. LaFramboise <aaron98wiridge9@aaronwl.com>

	* binutils/dlltool.c (asm_prefix): Add parameter: name.
	No underscore for symbols beginning with ?.
	(ASM_PREFIX): Add parameter: NAME.
	(gen_exp_file): Use new parameter.
	(make_label): Likewise.
	(make_imp_label): Likewise.
	(make_one_lib_file): Likewise.

2004-07-07  Tomer Levi  <Tomer.Levi@nsc.com>

	* MAINTAINERS: Added myself to the list.
	* readelf.c: Include "elf/crx.h".
	(guess_is_rela): Handle EM_CRX.
	(get_machine_name): Likewise.
	(dump_relocations): Likewise.

2004-07-03  Aaron W. LaFramboise  <aaron98wiridge9@aaronwl.com>

	* doc/binutils.texi (nm): Clarify weak symbol description.

2004-06-24  Ben Elliston  <bje@au.ibm.com>

	* readelf.c (get_segment_type): Display "GNU_STACK", not just
	"STACK", when a PT_GNU_STACK segment is encountered.

2004-06-24  Alan Modra  <amodra@bigpond.net.au>

	* objcopy.c (copy_section): Don't set _cooked_size.

2004-06-22  Alan Modra  <amodra@bigpond.net.au>

	* readelf.c (Elf32_Word): Delete.
	(get_32bit_dynamic_section): Handle SGI ELF dynamic segment.
	(get_64bit_dynamic_section): Likewise.

	* readelf.c (get_32bit_dynamic_section): Stop at first DT_NULL entry.
	(get_64bit_dynamic_section): Likewise.

	* readelf.c (dynamic_nent): New variable.
	(get_32bit_dynamic_section): Set it.
	(get_64bit_dynamic_section): Here too.
	(process_dynamic_section): Use it instead of dynamic_size.
	(process_syminfo): Likewise.

	* readelf.c (get_32bit_dynamic_section): Correct number of entries
	translated from external to internal form.
	(get_64bit_dynamic_section): Likewise.
